better Database name check SERVER-1218